// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col default breakpoint should render with span based styles 1`] = `
.circuit-0 {
  box-sizing: border-box;
  float: left;
  margin-left: calc(16px / 2);
  margin-right: calc(16px / 2);
  width: 50%;
  width: calc(50% - (16px));
}

<div
  className="circuit-0 circuit-1"
  span="6"
/>
`;

exports[`Col default breakpoint should render with span/skip based styles 1`] = `
.circuit-0 {
  box-sizing: border-box;
  float: left;
  margin-left: calc(16px / 2);
  margin-right: calc(16px / 2);
  width: 50%;
  width: calc(50% - (16px));
  left: 50%;
  position: relative;
}

<div
  className="circuit-0 circuit-1"
  span="6"
/>
`;

exports[`Col mobile breakpoint should render with span based styles 1`] = `
.circuit-0 {
  box-sizing: border-box;
  float: left;
  margin-left: calc(16px / 2);
  margin-right: calc(16px / 2);
  width: 50%;
  width: calc(50% - (16px));
}

@media (min-width:480px) {
  .circuit-0 {
    margin-left: calc(16px / 2);
    margin-right: calc(16px / 2);
    width: 100%;
    width: calc(100% - (16px));
  }
}

<div
  className="circuit-0 circuit-1"
  span={
    Object {
      "default": 6,
      "kilo": 12,
    }
  }
/>
`;

exports[`Col mobile breakpoint should render with span/skip based styles 1`] = `
.circuit-0 {
  box-sizing: border-box;
  float: left;
  margin-left: calc(16px / 2);
  margin-right: calc(16px / 2);
  width: 50%;
  width: calc(50% - (16px));
  margin-left: calc(16px / 2);
  margin-right: calc(16px / 2);
  width: 50%;
  width: calc(50% - (16px));
}

@media (min-width:480px) {
  .circuit-0 {
    margin-left: calc(16px / 2);
    margin-right: calc(16px / 2);
    width: 100%;
    width: calc(100% - (16px));
  }
}

@media (min-width:480px) {
  .circuit-0 {
    margin-left: calc(16px / 2);
    margin-right: calc(16px / 2);
    width: 25%;
    width: calc(25% - (16px));
  }
}

<div
  className="circuit-0 circuit-1"
  span={
    Object {
      "default": 6,
      "kilo": 12,
    }
  }
/>
`;

exports[`Col should render with default styles 1`] = `
.circuit-0 {
  box-sizing: border-box;
  float: left;
  margin-left: calc(16px / 2);
  margin-right: calc(16px / 2);
  width: 8.333333333333334%;
  width: calc(8.333333333333334% - (16px));
}

<div
  className="circuit-0 circuit-1"
  span="0"
/>
`;
